--- a/templates/AboutUsPage.html
+++ b/templates/AboutUsPage.html
@@ -4,63 +4,12 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/AboutUsPage.css' %}"> 
     <title>About Us Page</title>  
 
-    <style>
-        .image-container img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        .content-container {
-            padding: 20px;
-        }
-        .card {
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin: 10px;
-        }
-        .bold-text, label {
-            font-weight: bold; /* or 700 */
-            font-size: 1.1em; /* Adjust the size as needed */
-        }
-        .form-control, .form-control-textarea {
-            border-radius: 10px;
-            border: 1px solid #ddd;
-            padding: 10px;
-        }
-        .form-control {
-            margin-bottom: 15px;
-        }
-        .form-control-textarea {
-            resize: horizontal;
-            width: 100%; /* Makes the textarea take full width of its container */
-            max-width: 500px; /* Sets a maximum width */
-            height: 150px;
-        }
-        .btn-custom {
-            color: white;
-            border-radius: 10px;
-            padding: 10px 20px;
-            border: none;
-            font-weight: bold;
-        }
-        .btn-custom:hover {
-            background-color: #0056b3;
-        }
-        .faq-card h4 {
-            font-weight: bold;
-            margin-top: 10px;
-        }
-        .faq-card p {
-            margin-bottom: 15px;
-        }
-        .container-custom {
-            margin-top: 30px;
-        }
-    </style>
 </head>  
 <body>  
 <header>
