--- a/templates/ViewEventDetails.html
+++ b/templates/ViewEventDetails.html
@@ -4,43 +4,12 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/ViewEventDetails.css' %}"> 
     <title>Event Details</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            
-        }
-        .event-container {
-            max-width: 600px;
-            margin: 0 auto;
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 100px;
-            margin-bottom: 500px;
-        }
-        .event-header {
-            margin-bottom: 20px;
-        }
-        .event-header h2 {
-            margin: 0;
-            font-size: 24px;
-            color: #333;
-        }
-        .event-details {
-            margin-bottom: 20px;
-        }
-        .event-details p {
-            margin: 0;
-            font-size: 16px;
-            color: #555;
-        }
-        .event-description {
-            margin-top: 20px;
-        }
-    </style>
+    
 </head>
 <body>
     <header>
