--- a/templates/CreateBook.html
+++ b/templates/CreateBook.html
@@ -4,7 +4,11 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/CreateBook.css' %}"> 
+
     <title>Create Book Page</title>
     
     <!-- Place the first <script> tag in your HTML's <head> -->
@@ -25,47 +29,7 @@
         ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
     });
 </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            
-        }
-        .form-container {
-            
-            max-width: 800px;
-            margin: 20px auto;
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-        .save-button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #007bff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .save-button:hover {
-            background-color: #0056b3;
-        }
-    </style> 
+    
 </head>  
 <body>  
 <header>
@@ -115,12 +79,42 @@
                 <label for="book-description">Book Description:</label>
                 <input type="text" id="book-description" name="book-description" required>
             </div>
-            <div class="form-group">
-                
-
-                <label>Book Content:</label>
-                <textarea id="book-description" name="book-description" required></textarea>
+            <div class="form-group-file">
+            <div class="upload-container">
+                <div class="header-section">
+                    <h2>Upload Files</h2>
+                    <p>Upload files you want to share with your team members.</p>
+                    <p>PDF, Images & Videos are allowed.</p>
+                </div>
+                <div class="drop-section">
+                    <div class="col">
+                        <div class="cloud-icon">
+                            <img src="https://cdn-icons-png.freepik.com/512/4725/4725573.png" alt="cloud" width="25%">
+                        </div>
+                        <span>Drag & Drop your files here</span>
+                        <span>OR</span>
+                        <button class="file-selector">Browse Files</button>
+                        <input type="file" class="file-selector-input" multiple>
+                    </div>
+                    <div class="col">
+                        <div class="drop-here">Drop Here</div>
+                    </div>
+                </div>
+                <div class="list-section">
+                    <div class="list-title">Uploaded Files</div>
+                    <div class="list"></div>
+                </div>
             </div>
+            {% comment %} <div class="list-section">
+                <div class="list-title">Uploaded Files</div>
+                <div class="list">
+                    <li class="in-prog">
+                        <div class="col">
+
+                        </div>
+                    </li>
+                </div>
+            </div> {% endcomment %}
             <button type="submit" class="save-button">Save</button>
         </form>
     </div>
@@ -190,5 +184,116 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+
+<script>
+    const dropArea = document.querySelector('.drop-section')
+const listSection = document.querySelector('.list-section')
+const listContainer = document.querySelector('.list')
+const fileSelector = document.querySelector('.file-selector')
+const fileSelectorInput = document.querySelector('.file-selector-input')
+
+// upload files with browse button
+fileSelector.onclick = () => fileSelectorInput.click()
+fileSelectorInput.onchange = () => {
+    [...fileSelectorInput.files].forEach((file) => {
+        if(typeValidation(file.type)){
+            uploadFile(file)
+        }
+    })
+}
+
+// when file is over the drag area
+dropArea.ondragover = (e) => {
+    e.preventDefault();
+    [...e.dataTransfer.items].forEach((item) => {
+        if(typeValidation(item.type)){
+            dropArea.classList.add('drag-over-effect')
+        }
+    })
+}
+// when file leave the drag area
+dropArea.ondragleave = () => {
+    dropArea.classList.remove('drag-over-effect')
+}
+// when file drop on the drag area
+dropArea.ondrop = (e) => {
+    e.preventDefault();
+    dropArea.classList.remove('drag-over-effect')
+    if(e.dataTransfer.items){
+        [...e.dataTransfer.items].forEach((item) => {
+            if(item.kind === 'file'){
+                const file = item.getAsFile();
+                if(typeValidation(file.type)){
+                    uploadFile(file)
+                }
+            }
+        })
+    }else{
+        [...e.dataTransfer.files].forEach((file) => {
+            if(typeValidation(file.type)){
+                uploadFile(file)
+            }
+        })
+    }
+}
+
+
+// check the file type
+function typeValidation(type){
+    var splitType = type.split('/')[0]
+    if(type == 'application/pdf' || splitType == 'image' || splitType == 'video'){
+        return true
+    }
+}
+
+// upload file function
+function uploadFile(file){
+    listSection.style.display = 'block'
+    var li = document.createElement('li')
+    li.classList.add('in-prog')
+    li.innerHTML = `
+        <div class="col">
+            <img src="icons/${iconSelector(file.type)}" alt="">
+        </div>
+        <div class="col">
+            <div class="file-name">
+                <div class="name">${file.name}</div>
+                <span>0%</span>
+            </div>
+            <div class="file-progress">
+                <span></span>
+            </div>
+            <div class="file-size">${(file.size/(1024*1024)).toFixed(2)} MB</div>
+        </div>
+        <div class="col">
+            <svg xmlns="http://www.w3.org/2000/svg" class="cross" height="20" width="20"><path d="m5.979 14.917-.854-.896 4-4.021-4-4.062.854-.896 4.042 4.062 4-4.062.854.896-4 4.062 4 4.021-.854.896-4-4.063Z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="tick" height="20" width="20"><path d="m8.229 14.438-3.896-3.917 1.438-1.438 2.458 2.459 6-6L15.667 7Z"/></svg>
+        </div>
+    `
+    listContainer.prepend(li)
+    var http = new XMLHttpRequest()
+    var data = new FormData()
+    data.append('file', file)
+    http.onload = () => {
+        li.classList.add('complete')
+        li.classList.remove('in-prog')
+    }
+    http.upload.onprogress = (e) => {
+        var percent_complete = (e.loaded / e.total)*100
+        li.querySelectorAll('span')[0].innerHTML = Math.round(percent_complete) + '%'
+        li.querySelectorAll('span')[1].style.width = percent_complete + '%'
+    }
+    http.open('POST', 'sender.php', true)
+    http.send(data)
+    li.querySelector('.cross').onclick = () => http.abort()
+    http.onabort = () => li.remove()
+}
+// find icon for file
+function iconSelector(type){
+    var splitType = (type.split('/')[0] == 'application') ? type.split('/')[1] : type.split('/')[0];
+    return splitType + '.png'
+}
+</script>
 </body>  
 </html> 
