--- a/templates/CreateEvent.html
+++ b/templates/CreateEvent.html
@@ -1,172 +1,182 @@
 {%load static%}
-<!DOCTYPE html>  
-<html>  
-<head> 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/CreateEvent.css' %}" />
+
     <title>Create Book Page</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        
-    }
-    .form-container {
-        max-width: 600px;
-        margin: 0 auto;
-        border: 1px solid #ccc;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        margin-top:100px;
-        margin-bottom: 300px;
-    }
-    .form-group {
-        margin-bottom: 15px;
-    }
-    .form-group label {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 5px;
-    }
-    .form-group input, .form-group textarea {
-        width: 100%;
-        padding: 8px;
-        box-sizing: border-box;
-    }
-    .create-button {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        color: #fff;
-        background-color: #007bff;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-    .create-button:hover {
-        background-color: #0056b3;
-    }
-</style> 
-</head>  
-<body>  
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
-        <a class="navbar-brand text-white" href="{% url 'home' %}">Reading & Writing Books</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand text-white" href="{% url 'home' %}"
+          >Reading & Writing Books</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-            <ul class="navbar-nav mx-auto ">
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="#">Reader Community</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="#">Writer Community</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="{% url 'writer_profile' %}">Profile</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'sign_in' %}">Sign out</a>
-                </li>
-                
-            </ul>
+        <div
+          class="collapse navbar-collapse justify-content-between"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item mx-2">
+              <a class="nav-link text-white" href="{% url 'home' %}"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-white" href="#">Reader Community</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-white" href="#">Writer Community</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-white" href="{% url 'writer_profile' %}"
+                >Profile</a
+              >
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-white" href="{% url 'about_us' %}"
+                >About Us</a
+              >
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="{% url 'sign_in' %}"
+                >Sign out</a
+              >
+            </li>
+          </ul>
         </div>
-    </nav>
-</header>
-<section>
-    <div class="form-container">
+      </nav>
+    </header>
+    <section>
+      <div class="form-container">
         <h2>Create Event</h2>
         <form action="/create-event" method="post">
-            <div class="form-group">
-                <label for="book-title">Book Title:</label>
-                <input type="text" id="book-title" name="book-title" value="Book1" required>
-            </div>
-            <div class="form-group">
-                <label for="event-date">Event Date:</label>
-                <input type="date" id="event-date" name="event-date" required>
-            </div>
-            <div class="form-group">
-                <label for="event-description">Event Description:</label>
-                <textarea id="event-description" name="event-description" rows="4" required>Book by ...</textarea>
-            </div>
-            <button type="submit" class="create-button">Create</button>
+          <div class="form-group">
+            <label for="book-title">Book Title:</label>
+            <input
+              type="text"
+              id="book-title"
+              name="book-title"
+              value="Book1"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="event-date">Event Date:</label>
+            <input type="date" id="event-date" name="event-date" required />
+          </div>
+          <div class="form-group">
+            <label for="event-description">Event Description:</label>
+            <textarea
+              id="event-description"
+              name="event-description"
+              rows="4"
+              required
+            >
+Book by ...</textarea
+            >
+          </div>
+          <button type="submit" class="create-button">Create</button>
         </form>
-    </div>
+      </div>
     </section>
-    <hr>
+    <hr />
     <footer class="bg-dark text-white text-center text-lg-start">
-        <h3 class=" p-3 bg-secondary">Reading & Writing Books</h3>
-        <div class="container p-4">
+      <h3 class="p-3 bg-secondary">Reading & Writing Books</h3>
+      <div class="container p-4">
         <div class="row">
-            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
             <h5 class="text-uppercase">Contact</h5>
-                <ul class="list-unstyled mb-0">
-                <li>
-                    <a href="#!" class="text-white">Email: contact@readingwritingbooks.com</a>
-                </li>
-                <li>
-                    <a href="#!" class="text-white">Phone: +972 321 456 897</a>
-                </li>
-                <li>
-                    <a href="#!" class="text-white">Address: Palestine, Ramallah</a>
-                </li>
-                </ul>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white"
+                  >Email: contact@readingwritingbooks.com</a
+                >
+              </li>
+              <li>
+                <a href="#!" class="text-white">Phone: +972 321 456 897</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Address: Palestine, Ramallah</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Company</h5>
             <ul class="list-unstyled mb-0">
-                <li>
+              <li>
                 <a href="#!" class="text-white">About Us</a>
-                </li>
-                <li>
+              </li>
+              <li>
                 <a href="#!" class="text-white">Privacy Policy</a>
-                </li>
-                <li>
+              </li>
+              <li>
                 <a href="#!" class="text-white">Terms of Service</a>
-                </li>
-                <li>
+              </li>
+              <li>
                 <a href="#!" class="text-white">Cookie Policy</a>
-                </li>
+              </li>
             </ul>
-            </div>
-    
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Social Media</h5>
             <ul class="list-unstyled mb-0">
-                <li>
-                <a href="https://facebook.com" class="text-white"><i class="fab fa-facebook-f"></i> Facebook</a>
-                </li>
-                <li>
-                <a href="https://twitter.com" class="text-white"><i class="fab fa-twitter"></i> Twitter</a>
-                </li>
-                <li>
-                <a href="https://instagram.com" class="text-white"><i class="fab fa-instagram"></i> Instagram</a>
-                </li>
+              <li>
+                <a href="https://facebook.com" class="text-white"
+                  ><i class="fab fa-facebook-f"></i> Facebook</a
+                >
+              </li>
+              <li>
+                <a href="https://twitter.com" class="text-white"
+                  ><i class="fab fa-twitter"></i> Twitter</a
+                >
+              </li>
+              <li>
+                <a href="https://instagram.com" class="text-white"
+                  ><i class="fab fa-instagram"></i> Instagram</a
+                >
+              </li>
             </ul>
-            </div>
+          </div>
         </div>
-        </div>
-    
-        <div class="text-center p-3 bg-secondary">
-        <small> Copyright © Reading & Writing Books. All rights reserved.</small>
-        </div>
+      </div>
+
+      <div class="text-center p-3 bg-secondary">
+        <small>
+          Copyright © Reading & Writing Books. All rights reserved.</small
+        >
+      </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-</body>  
-</html> 
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  </body>
+</html>
