--- a/templates/EditWriterProfilePage.html
+++ b/templates/EditWriterProfilePage.html
@@ -4,63 +4,12 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/EditWriterProfilePage.css' %}"> 
     <title>Home Page</title>  
-    <style>
-        .container{
-            margin: 0 auto;
-            width: 80%;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-            text-align: center;
-            
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        label {
-            font-weight: bold;
-            display: block;
-            margin-bottom: 5px;
-        }
-        input, select {
-            width: 100%;
-            padding: 10px;
-            border-radius: 10px;
-            border: 1px solid #ddd;
-            margin-bottom: 15px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            border-radius: 10px;
-            border: none;
-            background-color: #808080;
-            color: #fff;
-            font-weight: bold;
-            cursor: pointer;
-            margin: 10px
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        textarea{
-            width: 100%;
-            padding: 10px;
-            border-radius: 10px;
-            border: 1px solid #ddd;
-            margin-bottom: 15px;
-            resize: vertical;
-        }
-        img {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-        }
-    </style>
+    
 </head>  
 <body>  
 <header>
