--- a/templates/ReaderProfile.html
+++ b/templates/ReaderProfile.html
@@ -4,94 +4,12 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link rel="stylesheet" href="{% static 'css/ReaderProfile.css' %}"> 
     <title>Home Page</title>  
-    <style>
-        img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-        .profile-header {
-            display: flex;
-            align-items: center;
-        }
-        .profile-header img {
-            margin-right: 15px;
-        }
-        .search-bar {
-            display: flex;
-            align-items: center;
-        }
-        .search-bar input {
-            width: 200px;
-        }
-        .card-columns {
-            column-count: 3;
-        }
-        .card {
-            margin-bottom: 15px;
-        }
-        .card img {
-            width: 100%;
-            height: auto;
-        }
-        .card-title {
-            font-size: 1.5rem;
-        }
-        .card-text {
-            font-size: 1rem;
-        }
-        footer {
-            background-color: #343a40;
-        }
-        footer h3 {
-            background-color: #6c757d;
-        }
-        footer ul {
-            padding-left: 0;
-            list-style: none;
-        }
-        footer ul li a {
-            color: #ffffff;
-        }
-        footer ul li a:hover {
-            color: #dddddd;
-        }
-        .content{
-            max-width: 100%;
-        }
-        .h2{
-            text-align:center;
-            margin-bottom: 20px;
-        }
-        .post-btn{
-            background-color: #808080;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 22px;
-            font-weight:bold;
-            margin-top: 10px;
-        }
-
-        .graph-image {
-            width: 100%;
-            height: 200px;
-            border-radius:0;
-            
-        }
-        .xp-tracker {
-            width: 100%;
-            height: 200px;
-            border-radius:0;
-            
-        }
-        
-    </style>
+    
 </head>  
 <body>  
 <header>
@@ -133,7 +51,7 @@
         <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-jacket-jeansie_1142-57736.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid" alt="user-img">
         <div>
             <a href="{%url 'edit_reader_profile'%}" class="btn btn-link">Edit Profile</a>
-            <h3>User Name</h3>
+            <h3>{{user.first_name}} {{user.last_name}}</h3>
         </div>
     </div>
     <div class="search-bar mt-3">
@@ -141,7 +59,7 @@
     </div>
     <div>
         <h3 class="mt-4">Bio</h3>
-        <p>User Bio goes here.</p>
+        <p>{{user.bio}}</p>
     </div>
     <hr>
 </div>
@@ -154,12 +72,14 @@
                 <h2>Books Library</h2>
                 {% comment %} <img src="https://img.freepik.com/premium-photo/pixar-style-3d-cartoon-character_63106-3548.jpg" alt="Atlas" class="card-img-top" style="width:30%"> {% endcomment %}
                 <div class="card-body">
+                    {% comment %} {%for book in books%} {% endcomment %}
                     <ul>
+                        {% comment %} <li><a href="{% url 'iew_book_detail' book.id %}">{{book.title}}</a></li> {% endcomment %}
                         <li><a href="#">Book 1</a></li>
                         <li><a href="#">Book 2</a></li>
                         <li><a href="#">Book 3</a></li>
                         <li><a href="#">Book 4</a></li>
-                        <li><a href="#">Book 5</a></li>
+                        <li><a href="#">Book 5</a></li> 
                     </ul>
                 </div>
             </div>
